# remote-mcp

./: .gitignore  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  CLAUDE.md.fragment.md  CLAUDE.md.fragment.zh.md  CLAUDE.zh.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  LICENSE  README.md  README.zh.md  pyproject.toml  软件设计文档.md
.claude/: settings.local.json
docs/: README.md  README.zh.md
docs/explanation/: README.md  README.zh.md  architecture.md  architecture.zh.md  bandwidth-and-latency.md  bandwidth-and-latency.zh.md  cwd-and-path-resolution.md  cwd-and-path-resolution.zh.md  design-decisions.md  design-decisions.zh.md  feedback-loop.md  feedback-loop.zh.md  job-panel.md  job-panel.zh.md  multi-host-model.md  multi-host-model.zh.md  network-failure-contract.md  network-failure-contract.zh.md  reconnect-and-warning.md  reconnect-and-warning.zh.md  why-non-persistent-bash.md  why-non-persistent-bash.zh.md
docs/how-to/: README.md  README.zh.md  add-a-new-tool.md  add-a-new-tool.zh.md  configure-multi-host.md  configure-multi-host.zh.md  debug-mcp-not-appearing.md  debug-mcp-not-appearing.zh.md  inspect-feedback-log.md  inspect-feedback-log.zh.md  recover-from-disconnect.md  recover-from-disconnect.zh.md  run-long-background-jobs.md  run-long-background-jobs.zh.md  set-up-proxyjump.md  set-up-proxyjump.zh.md  tune-for-slow-networks.md  tune-for-slow-networks.zh.md  use-the-workflow-fragment.md  use-the-workflow-fragment.zh.md
docs/reference/: README.md  README.zh.md  cli.md  cli.zh.md  config-schema.md  config-schema.zh.md  errors.md  errors.zh.md
docs/superpowers/: README.md
docs/tutorial/: .first-remote-session.zh.md.swp  README.md  README.zh.md  first-remote-session.md  first-remote-session.zh.md
remote_mcp/: __init__.py  __main__.py  bash_session.py  config.py  connection.py  paths.py  schemas.py  server.py
remote_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
remote_mcp/jobs/: __init__.py  constants.py  init.py  meta.py  paths.py  scripts.py  sid.py  state.py
remote_mcp/tools/: __init__.py  bash.py  download.py  edit.py  feedback.py  file_stat.py  glob.py  grep.py  job_archive.py  job_kill.py  job_script.py  jobs.py  multi_edit.py  multi_read.py  read.py  remote_info.py  upload.py  write.py
tests/: conftest.py
tests/integration/: conftest.py  (+26 more)
(+60 files in other folders)
