[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-mcp"
version = "0.1.0"
description = "Local MCP server proxying file/shell tools to a remote Linux host over SSH"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "paramiko>=3.0",
    "mcp>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "docker>=6.0",
]

[project.scripts]
remote-mcp = "remote_mcp.__main__:cli"

[tool.setuptools.packages.find]
include = ["remote_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
